security: move Rails authentication to dedicated server